renkko/media/sonyx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonyx
  labels:
    app: sonyx
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: sonyx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonyx
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - image: deluan/navidrome:latest
          name: sonyx
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
              subPath: library/music
              readOnly: true
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "200m"
              memory: 128Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: sonyx-data-pvc
      - name: music
        hostPath:
          path: /var/mnt/media
          type: Directory
