renkko/media/sonyx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonyx
spec:
  selector:
    app: sonyx
  ports:
  - protocol: TCP
    port: 4533
    targetPort: 4533
  type: ClusterIP
